--- a/.config/compton/config
+++ b/.config/compton/config
@@ -18,12 +18,15 @@ shadow-ignore-shaped = true;
 
 
 # Opacity
-menu-opacity = 0.90;
-inactive-opacity = 0.90;
+menu-opacity = 0.95;
+inactive-opacity = 0.95;
 inactive-opacity-override = true;
 alpha-step = 0.06
 
 detect-client-opacity = true;
+
+inactive-dim = 0.1;
+inactive-dim-fixed = true;
 
 
 # Fading
