--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,8 +33,8 @@ exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
 
 
 # System font
-font pango: Droid Sans Mono Slashed for Powerline Regular 10
-
+#font pango: Droid Sans Mono Slashed for Powerline Regular 10
+font pango: Meslo LG S for Powerline 10
 
 # Colours from Xresources
 set_from_resource $black       color0
@@ -167,10 +167,10 @@ bindsym $mod+Shift+r restart
 
 
 # Resize windows dynamically
-bindsym $mod+Shift+u resize shrink width 4 px or 4 ppt
-bindsym $mod+Shift+i resize shrink height 4 px or 4 ppt
-bindsym $mod+Shift+o resize grow height 4 px or 4 ppt
-bindsym $mod+Shift+p resize grow width 4 px or 4 ppt
+bindsym $mod+Shift+u resize shrink width 40 px or 2 ppt
+bindsym $mod+Shift+i resize shrink height 40 px or 2 ppt
+bindsym $mod+Shift+o resize grow height 40 px or 2 ppt
+bindsym $mod+Shift+p resize grow width 40 px or 2 ppt
 
 
 # System commands
