--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -14,8 +14,8 @@
 [startup]
 command_after_plugins = ""
 command_before_plugins = ""
-display_logo = on
-display_version = on
+display_logo = off
+display_version = off
 sys_rlimit = ""
 
 [look]
@@ -36,8 +36,8 @@ buffer_search_regex = off
 buffer_search_where = message
 buffer_time_format = " "
 color_basic_force_bold = off
-color_inactive_buffer = off
-color_inactive_message = off
+color_inactive_buffer = on
+color_inactive_message = on
 color_inactive_prefix = on
 color_inactive_prefix_buffer = on
 color_inactive_time = off
@@ -50,7 +50,7 @@ command_incomplete = off
 confirm_quit = off
 confirm_upgrade = off
 day_change = on
-day_change_message_1date = "-- %a, %d %b %Y --"
+day_change_message_1date = "           -- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
 eat_newline_glitch = off
 emphasized_attributes = ""
@@ -106,10 +106,10 @@ prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
-prefix_error = "⚠"
-prefix_join = "◥"
-prefix_network = "🛈"
-prefix_quit = "◣"
+prefix_error = " ⚠ "
+prefix_join = " ◥ "
+prefix_network = " 🛈 "
+prefix_quit = " ◣ "
 prefix_same_nick = ""
 prefix_suffix = "│"
 quote_nick_prefix = "<"
@@ -117,265 +117,25 @@ quote_nick_suffix = ">"
 quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = ""
+read_marker_string = "- "
 save_config_on_exit = on
-save_layout_on_exit = none
+save_layout_on_exit = all
 scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
 separator_horizontal = ""
 separator_vertical = ""
-tab_width = 1
+tab_width = 2
 time_format = "%a, %d %b %Y %T"
 window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
-window_title = "WeeChat ${info:version}"
+window_title = "WeeChat"
 word_chars_highlight = "!\u00A0,-,_,|,alnum"
 word_chars_input = "!\u00A0,-,_,|,alnum"
 
 [palette]
-100 = ""
-101 = ""
-102 = ""
-103 = ""
-104 = ""
-105 = ""
-106 = ""
-107 = ""
-108 = ""
-109 = ""
-110 = ""
-111 = ""
-112 = ""
-113 = ""
-114 = ""
-115 = ""
-116 = ""
-117 = ""
-118 = ""
-119 = ""
-120 = ""
-121 = ""
-122 = ""
-123 = ""
-124 = ""
-125 = ""
-126 = ""
-127 = ""
-128 = ""
-129 = ""
-130 = ""
-131 = ""
-132 = ""
-133 = ""
-134 = ""
-135 = ""
-136 = ""
-137 = ""
-138 = ""
-139 = ""
-140 = ""
-141 = ""
-142 = ""
-143 = ""
-144 = ""
-145 = ""
-146 = ""
-147 = ""
-148 = ""
-149 = ""
-150 = ""
-151 = ""
-152 = ""
-153 = ""
-154 = ""
-155 = ""
-156 = ""
-157 = ""
-158 = ""
-159 = ""
-160 = ""
-161 = ""
-162 = ""
-163 = ""
-164 = ""
-165 = ""
-166 = ""
-167 = ""
-168 = ""
-169 = ""
-17 = ""
-170 = ""
-171 = ""
-172 = ""
-173 = ""
-174 = ""
-175 = ""
-176 = ""
-177 = ""
-178 = ""
-179 = ""
-18 = ""
-180 = ""
-181 = ""
-182 = ""
-183 = ""
-184 = ""
-185 = ""
-186 = ""
-187 = ""
-188 = ""
-189 = ""
-19 = ""
-190 = ""
-191 = ""
-192 = ""
-193 = ""
-194 = ""
-195 = ""
-196 = ""
-197 = ""
-198 = ""
-199 = ""
-20 = ""
-200 = ""
-201 = ""
-202 = ""
-203 = ""
-204 = ""
-205 = ""
-206 = ""
-207 = ""
-208 = ""
-209 = ""
-21 = ""
-210 = ""
-211 = ""
-212 = ""
-213 = ""
-214 = ""
-215 = ""
-216 = ""
-217 = ""
-218 = ""
-219 = ""
-22 = ""
-220 = ""
-221 = ""
-222 = ""
-223 = ""
-224 = ""
-225 = ""
-226 = ""
-227 = ""
-228 = ""
-229 = ""
-23 = ""
-230 = ""
-231 = ""
-232 = ""
-233 = ""
-234 = ""
-235 = ""
-236 = ""
-237 = ""
-238 = ""
-239 = ""
-24 = ""
-240 = ""
-241 = ""
-242 = ""
-243 = ""
-244 = ""
-245 = ""
-246 = ""
-247 = ""
-248 = ""
-249 = ""
-25 = ""
-250 = ""
-251 = ""
-252 = ""
-253 = ""
-254 = ""
-255 = ""
-256 = ""
-26 = ""
-27 = ""
-28 = ""
-29 = ""
-30 = ""
-31 = ""
-32 = ""
-33 = ""
-34 = ""
-35 = ""
-36 = ""
-37 = ""
-38 = ""
-39 = ""
-40 = ""
-41 = ""
-42 = ""
-43 = ""
-44 = ""
-45 = ""
-46 = ""
-47 = ""
-48 = ""
-49 = ""
-50 = ""
-51 = ""
-52 = ""
-53 = ""
-54 = ""
-55 = ""
-56 = ""
-57 = ""
-58 = ""
-59 = ""
-60 = ""
-61 = ""
-62 = ""
-63 = ""
-64 = ""
-65 = ""
-66 = ""
-67 = ""
-68 = ""
-69 = ""
-70 = ""
-71 = ""
-72 = ""
-73 = ""
-74 = ""
-75 = ""
-76 = ""
-77 = ""
-78 = ""
-79 = ""
-80 = ""
-81 = ""
-82 = ""
-83 = ""
-84 = ""
-85 = ""
-86 = ""
-87 = ""
-88 = ""
-89 = ""
-90 = ""
-91 = ""
-92 = ""
-93 = ""
-94 = ""
-95 = ""
-96 = ""
-97 = ""
-98 = ""
-99 = ""
 
 [color]
 bar_more = lightmagenta
@@ -385,7 +145,7 @@ chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
 chat_delimiters = gray
-chat_highlight = yellow
+chat_highlight = white
 chat_highlight_bg = magenta
 chat_host = cyan
 chat_inactive_buffer = darkgray
@@ -501,7 +261,7 @@ input.conditions = "active"
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "+    » +,input_text"
+input.items = "+    ❱ +,input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
@@ -566,6 +326,9 @@ title.size_max = 0
 title.type = window
 
 [layout]
+default.buffer = "core;weechat;1"
+default.window = "1;0;0;0;core;weechat"
+default.current = on
 
 [notify]
 irc.freenode.#go-nuts = highlight
