--- a/.config/i3/config
+++ b/.config/i3/config
@@ -189,12 +189,9 @@ bindsym $mod+Escape mode "$mode_system"
 
 
 # Keyboard functionkeys (audio, brightness, screenshots)
-bindsym XF86AudioRaiseVolume exec amixer -c 0 set Master 8+ && killall -SIGUSR1 i3status
-bindsym XF86AudioLowerVolume exec amixer -c 0 set Master 8- && killall -SIGUSR1 i3status
-bindsym XF86AudioMute exec amixer set Master toggle && killall -SIGURSR1 i3status
-
-bindsym XF86MonBrightnessUp exec --no-startup-id /usr/bin/xbacklight -inc 5
-bindsym XF86MonBrightnessDown exec --no-startup-id /usr/bin/xbacklight -dec 5
+bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -i 5
+bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 5
+bindsym XF86AudioMute exec --no-startup-id pamixer -t
 
 bindsym Print exec --no-startup-id scrot ~/Pictures/Screenshot_%Y-%m-%d_%H-%M-%S.png
 bindsym Ctrl+Print exec --no-startup-id scrot -u -b ~/Pictures/Screenshot_%Y-%m-%d_%H-%M-%S.png
