--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,7 +8,7 @@ set $mod Mod4
 exec_always --no-startup-id xrandr --dpi 200
 
 # Wallpaper
-exec_always --no-startup-id feh --bg-scale ~/Pictures/wp.jpg
+exec_always --no-startup-id feh --bg-fill ~/Pictures/wp.jpg
 
 # Polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar
@@ -59,12 +59,11 @@ floating_modifier $mod
 
 
 # Start a terminal
-bindsym $mod+Shift+Return exec i3-sensible-terminal
 bindsym $mod+Return exec termite
 
 
 # Kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+w kill
 
 
 # start dmenu (a program launcher)
@@ -97,9 +96,9 @@ bindsym $mod+f fullscreen toggle
 
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+Shift+s layout stacking
+bindsym $mod+Shift+w layout tabbed
+bindsym $mod+Shift+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -195,6 +194,10 @@ bindsym XF86AudioMute exec --no-startup-id pamixer -t
 bindsym Print exec --no-startup-id scrot ~/Pictures/Screenshot_%Y-%m-%d_%H-%M-%S.png
 bindsym Ctrl+Print exec --no-startup-id scrot -u -b ~/Pictures/Screenshot_%Y-%m-%d_%H-%M-%S.png
 bindsym --release Shift+Print exec --no-startup-id scrot -s ~/Pictures/Screenshot_%Y-%m-%d_%H-%M-%S.png
+
+
+# Alt+Shift to change keyboard layout
+exec --no-startup-id "setxkbmap -layout 'gb,es' -option 'grp:alt_shift_toggle'"
 
 
 # Window colors
