--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -63,7 +63,7 @@ hotlist_count_max = 2
 hotlist_count_min_msg = 2
 hotlist_names_count = 3
 hotlist_names_length = 0
-hotlist_names_level = 12
+hotlist_names_level = 10
 hotlist_names_merged_buffers = off
 hotlist_prefix = "H: "
 hotlist_remove = merged
@@ -327,9 +327,9 @@ title.type = window
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.freenode;1"
-default.buffer = "irc;freenode.#archlinux;2"
-default.window = "1;0;0;0;irc;freenode.#archlinux"
+default.buffer = "irc;server.jfc;1"
+default.buffer = "irc;jfc.#team2;2"
+default.window = "1;0;0;0;irc;jfc.#team2"
 default.current = on
 
 [notify]
