--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -21,10 +21,10 @@ sys_rlimit = ""
 [look]
 align_end_of_lines = message
 align_multiline_words = on
-bar_more_down = "▼"
-bar_more_left = "◀"
-bar_more_right = "▶"
-bar_more_up = "▲"
+bar_more_down = "⯆"
+bar_more_left = "⯇"
+bar_more_right = "⯈"
+bar_more_up = "⯅"
 bare_display_exit_on_input = on
 bare_display_time_format = "%H:%M"
 buffer_auto_renumber = on
@@ -34,7 +34,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
-buffer_time_format = " "
+buffer_time_format = ""
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -50,7 +50,7 @@ command_incomplete = off
 confirm_quit = off
 confirm_upgrade = off
 day_change = on
-day_change_message_1date = "           -- %a, %d %b %Y --"
+day_change_message_1date = "-- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
 eat_newline_glitch = off
 emphasized_attributes = ""
@@ -76,7 +76,7 @@ input_share = none
 input_share_overwrite = off
 input_undo_max = 32
 item_away_message = on
-item_buffer_filter = "⚑"
+item_buffer_filter = "❖"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
 item_time_format = "%H:%M"
@@ -96,7 +96,7 @@ paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
-prefix_action = "⚡"
+prefix_action = "⌁"
 prefix_align = right
 prefix_align_max = 10
 prefix_align_min = 10
@@ -105,19 +105,19 @@ prefix_align_more_after = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
-prefix_buffer_align_more_after = on
-prefix_error = " ⚠ "
-prefix_join = " ◥ "
-prefix_network = " 🛈 "
-prefix_quit = " ◣ "
+prefix_buffer_align_more_after = off
+prefix_error = "⌿"
+prefix_join = "⟶"
+prefix_network = "⍟"
+prefix_quit = "⟵"
 prefix_same_nick = ""
 prefix_suffix = "│"
-quote_nick_prefix = "<"
-quote_nick_suffix = ">"
+quote_nick_prefix = "❬"
+quote_nick_suffix = "❭"
 quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "- "
+read_marker_string = "-"
 save_config_on_exit = on
 save_layout_on_exit = all
 scroll_amount = 3
@@ -151,7 +151,7 @@ chat_host = cyan
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
 chat_nick = lightcyan
-chat_nick_colors = "red,green,brown,blue,magenta,cyan,white,lightred,lightgreen,yellow,lightblue,lightmagenta,lightcyan"
+chat_nick_colors = "red,green,brown,blue,magenta,cyan,lightred,lightgreen,yellow,lightblue,lightmagenta,lightcyan"
 chat_nick_offline = darkgray
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = darkgray
@@ -247,7 +247,7 @@ buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = horizontal
 buffers.hidden = on
-buffers.items = "+   +,buffers"
+buffers.items = "buffers"
 buffers.position = top
 buffers.priority = 0
 buffers.separator = off
@@ -261,7 +261,7 @@ input.conditions = "active"
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "+    ❱ +,input_text"
+input.items = "  ❯ +input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
@@ -327,9 +327,9 @@ title.type = window
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.jfc;1"
-default.buffer = "irc;jfc.#team2;2"
-default.window = "1;0;0;0;irc;jfc.#team2"
+default.buffer = "irc;server.freenode;1"
+default.buffer = "irc;freenode.#archlinux;2"
+default.window = "1;0;0;0;irc;freenode.#archlinux"
 default.current = on
 
 [notify]
