--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,3 +1,15 @@
+; .config/polybar/config
+
+[colours]
+bg          = #cc000000
+sel_bg      = #88000000
+white       = #d8dee9
+grey        = #c0c5ce
+darkgrey    = #65737e
+red         = #ec5f67
+yellow      = #fac863
+green       = #99c794
+
 
 ; BAR
 
@@ -6,15 +18,15 @@ width = 100%
 height = 52
 bottom = true
 
-background = #88000000
-foreground = #ebdbb2
+background = ${colours.bg}
+foreground = ${colours.white}
 
 line-size = 2
 
 module-margin-left = 3
 padding = 2
 
-font-0 = Meslo LG S for Powerline:size=20;4
+font-0 = Hack:size=20;4
 font-1 = Noto Emoji:size=20;4
 font-2 = FontAwesome:size=20;4
 
@@ -37,21 +49,21 @@ ws-icon-3 = 9;
 ws-icon-default = 
 
 label-focused = %icon%
-label-focused-background = #cc000000
-label-focused-underline = #ebdbb2
+label-focused-background = ${colours.sel_bg}
+label-focused-underline = ${colours.white}
 label-focused-padding = 2
 
 label-unfocused = %icon%
-label-unfocused-foreground = #a89984
+label-unfocused-foreground = ${colours.grey}
 label-unfocused-padding = 2
 
 label-visible = %icon%
-label-visible-foreground = #a89984
+label-visible-foreground = ${colours.grey}
 label-visible-padding = 2
 
 label-urgent = %icon%
-label-urgent-foreground = #fb4934
-label-urgent-underline = #fb4934
+label-urgent-foreground = ${colours.red}
+label-urgent-underline = ${colours.red}
 label-urgent-padding = 2
 
 
@@ -61,27 +73,31 @@ type = internal/bspwm
 ws-icon-0 = I;
 ws-icon-1 = II;
 ws-icon-2 = III;
-ws-icon-3 = X;
+ws-icon-3 = V;
 ws-icon-default = 
 
+format = <label-state> <label-mode>
+
 label-focused = %icon%
-label-focused-background = #cc000000
-label-focused-underline = #ebdbb2
+label-focused-background = ${colours.sel_bg}
+label-focused-underline = ${colours.white}
 label-focused-padding = 2
 
 label-occupied = %icon%
-label-occupied-background = #cc000000
-label-occupied-foreground = #a89984
-label-occupied-padding = 1
+label-occupied-background = ${colours.sel_bg}
+label-occupied-foreground = ${colours.grey}
+label-occupied-padding = 2
 
 label-urgent = %icon%
-label-urgent-foreground = #fb4934
-label-urgent-underline = #fb4934
-label-urgent-padding = 1
+label-urgent-foreground = ${colours.red}
+label-urgent-underline = ${colours.red}
+label-urgent-padding = 2
 
 label-empty = %icon%
-label-empty-foreground = #a89984
+label-empty-foreground = ${colours.grey}
 label-empty-padding = 1
+
+label-monocle = 🔎
 
 
 [module/date]
@@ -91,7 +107,7 @@ date = %a %d %b,
 time = %H:%M
 
 format = <label>
-format-background = #cc000000
+format-background = ${colours.sel_bg}
 
 label = %date% %time%
 label-padding = 3
@@ -109,9 +125,9 @@ format-discharging = <ramp-capacity> <label-discharging>
 format-full = <ramp-capacity> <label-full>
 
 label-charging = %percentage%% (%time%)
-label-charging-foreground = #b8bb26
+label-charging-foreground = ${colours.green}
 label-discharging = %percentage%% (%time%)
-label-discharging-foreground = #fabd2f
+label-discharging-foreground = ${colours.yellow}
 label-full = %percentage%%
 
 ramp-capacity-0 = 
@@ -143,7 +159,7 @@ format-muted = <label-muted>
 
 label-volume = %percentage%%
 label-muted = 🔇 -
-label-muted-foreground = #928374
+label-muted-foreground = ${colours.darkgrey}
 
 ramp-volume-0 = 🔈
 ramp-volume-1 = 🔉
@@ -161,7 +177,7 @@ format-unmounted = <label-unmounted>
 
 label-mounted =  %free%
 label-unmounted =  -
-label-unmounted-foreground = #928374
+label-unmounted-foreground = ${colours.darkgrey}
 
 
 [module/wlan]
@@ -174,7 +190,7 @@ format-disconnected = <label-disconnected>
 
 label-connected =  %signal%%
 label-disconnected =  -
-label-disconnected-foreground = #928374
+label-disconnected-foreground = ${colours.darkgrey}
 
 
 [module/keyboard]
