--- a/.weechat/buffers.conf
+++ b/.weechat/buffers.conf
@@ -11,20 +11,20 @@
 
 [color]
 current_bg = default
-current_fg = default
+current_fg = *cyan
 default_bg = default
-default_fg = cyan
+default_fg = darkgray
 hotlist_highlight_bg = default
-hotlist_highlight_fg = red
+hotlist_highlight_fg = *magenta
 hotlist_low_bg = default
-hotlist_low_fg = default
+hotlist_low_fg = *darkgray
 hotlist_message_bg = default
-hotlist_message_fg = default
+hotlist_message_fg = *darkgray
 hotlist_private_bg = default
-hotlist_private_fg = red
+hotlist_private_fg = *green
 none_channel_bg = default
-none_channel_fg = cyan
-number = cyan
+none_channel_fg = darkgray
+number = default
 number_char = black
 prefix_bufname = default
 queries_default_bg = default
@@ -57,7 +57,7 @@ detach_query = off
 hide_merged_buffers = all
 hotlist_counter = off
 immune_detach_buffers = ""
-indenting = on
+indenting = off
 indenting_amount = 2
 indenting_number = on
 jump_prev_next_visited_buffer = off
@@ -66,15 +66,15 @@ mouse_move_buffer = on
 mouse_wheel = on
 name_crop_suffix = "+"
 name_size_max = 0
-number_char = "  "
+number_char = " "
 prefix = off
-prefix_bufname = ""
+prefix_bufname = " "
 prefix_empty = on
 prefix_for_query = ""
 short_names = on
 show_lag = off
-show_number = on
+show_number = off
 sort = number
-suffix_bufname = ""
+suffix_bufname = " "
 toggle_bar = on
 whitelist_buffers = ""
