--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -288,7 +288,7 @@ nicklist.color_fg = darkgray
 nicklist.conditions = "${active}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = on
+nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -327,9 +327,8 @@ title.type = window
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.freenode;1"
-default.buffer = "irc;freenode.#archlinux;2"
-default.window = "1;0;0;0;irc;freenode.#archlinux"
+default.buffer = "irc;server.jfc;1"
+default.window = "1;0;0;0;irc;server.jfc"
 default.current = on
 
 [notify]
