--- a/.config/compton/config
+++ b/.config/compton/config
@@ -1,4 +1,8 @@
 # .config/compton/config
+# -------------------------------------
+# compton configuration file
+
+
 
 backend = "glx";
 paint-on-overlay = true;
@@ -6,6 +10,7 @@ glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 unredir-if-possible = true;
 vsync = "opengl-swc";
+
 
 
 # Shadows
@@ -20,16 +25,16 @@ shadow-exclude = [
 ];
 
 
+
 # Opacity
 menu-opacity = 0.95;
 inactive-opacity = 0.95;
 inactive-opacity-override = true;
 alpha-step = 0.06
-
 detect-client-opacity = true;
-
 inactive-dim = 0.1;
 inactive-dim-fixed = true;
+
 
 
 # Fading
@@ -38,6 +43,9 @@ fade-delta = 2;
 fade-in-step = 0.05;
 fade-out-step = 0.05;
 
+
+
+# Specific window type
 wintypes: {
     tooltip = { fade = true; shadow = false; opacity = 1.00; focus = true; };
 };
