--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,4 +1,8 @@
 ; .config/polybar/config
+; -------------------------------------
+; polybar configuration file
+
+
 
 [colours]
 bg          = #cc000000
@@ -11,12 +15,15 @@ yellow      = #fac863
 green       = #99c794
 
 
+
 ; BAR
 
 [bar/bottom]
+monitor = eDP-1
 width = 100%
 height = 52
 bottom = true
+fixed-center = true
 
 background = ${colours.bg}
 foreground = ${colours.white}
@@ -33,6 +40,7 @@ font-2 = FontAwesome:size=20;4
 modules-left = i3 bspwm
 modules-center =
 modules-right = volume backlight keyboard wlan filesystem battery date
+
 
 
 ; MODULES
@@ -65,6 +73,7 @@ label-urgent = %icon%
 label-urgent-foreground = ${colours.red}
 label-urgent-underline = ${colours.red}
 label-urgent-padding = 2
+
 
 
 [module/bspwm]
@@ -100,6 +109,7 @@ label-empty-padding = 1
 label-monocle = 🔎
 
 
+
 [module/date]
 type = internal/date
 interval = 5
@@ -110,7 +120,9 @@ format = <label>
 format-background = ${colours.sel_bg}
 
 label = %date% %time%
+label-underline = ${colours.white}
 label-padding = 3
+
 
 
 [module/battery]
@@ -126,8 +138,10 @@ format-full = <ramp-capacity> <label-full>
 
 label-charging = %percentage%% (%time%)
 label-charging-foreground = ${colours.green}
+
 label-discharging = %percentage%% (%time%)
 label-discharging-foreground = ${colours.yellow}
+
 label-full = %percentage%%
 
 ramp-capacity-0 = 
@@ -135,6 +149,7 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
+
 
 
 [module/backlight]
@@ -149,6 +164,7 @@ ramp-1 = 🌔
 ramp-2 = 🌓
 ramp-3 = 🌒
 ramp-4 = 🌑
+
 
 
 [module/volume]
@@ -166,6 +182,7 @@ ramp-volume-1 = 🔉
 ramp-volume-2 = 🔊
 
 
+
 [module/filesystem]
 type = internal/fs
 mount-0 = /mnt/ntfs
@@ -180,6 +197,7 @@ label-unmounted =  -
 label-unmounted-foreground = ${colours.darkgrey}
 
 
+
 [module/wlan]
 type = internal/network
 interface = wlp2s0
@@ -191,6 +209,7 @@ format-disconnected = <label-disconnected>
 label-connected =  %signal%%
 label-disconnected =  -
 label-disconnected-foreground = ${colours.darkgrey}
+
 
 
 [module/keyboard]
