--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,4 +1,7 @@
 ! .config/rofi/config
+! -------------------------------------
+! rofi configuration file
+
 
 
 ! General
@@ -8,19 +11,19 @@ rofi.cycle:             false
 rofi.scroll-method:     1
 
 
+
 ! Theming
 
 rofi.font:              Hack 20
-
 !                       bg       fg       altbg    hlbg     hlfg
 rofi.color-normal:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
 rofi.color-urgent:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
 rofi.color-active:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
 rofi.color-window:      #1b2b34, #1b2b34
-
 rofi.line-margin:       16
 rofi.separator-style:   none
 rofi.hide-scrollbar:    true
+
 
 
 ! Layout
