--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -106,9 +106,9 @@ prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = off
-prefix_error = "⌿"
+prefix_error = ""
 prefix_join = "⟶"
-prefix_network = "⍟"
+prefix_network = ""
 prefix_quit = "⟵"
 prefix_same_nick = ""
 prefix_suffix = "│"
@@ -151,7 +151,7 @@ chat_host = cyan
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
 chat_nick = lightcyan
-chat_nick_colors = "red,green,brown,blue,magenta,cyan,lightred,lightgreen,yellow,lightblue,lightmagenta,lightcyan"
+chat_nick_colors = "cyan,magenta,green,brown,lightblue,lightcyan,lightmagenta,lightgreen,blue"
 chat_nick_offline = darkgray
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = darkgray
@@ -288,7 +288,7 @@ nicklist.color_fg = darkgray
 nicklist.conditions = "${active}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -328,6 +328,9 @@ title.type = window
 [layout]
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.jfc;1"
+default.buffer = "irc;server.freenode;2"
+default.buffer = "irc;jfc.#team2;3"
+default.buffer = "irc;freenode.#archlinux;4"
 default.window = "1;0;0;0;irc;server.jfc"
 default.current = on
 
