--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -327,11 +327,7 @@ title.type = window
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.jfc;1"
-default.buffer = "irc;server.freenode;2"
-default.buffer = "irc;jfc.#team2;3"
-default.buffer = "irc;freenode.#archlinux;4"
-default.window = "1;0;0;0;irc;server.jfc"
+default.window = "1;0;0;0;core;weechat"
 default.current = on
 
 [notify]
