--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -14,7 +14,7 @@ silver      = #a7adba
 red         = #ec5f67
 yellow      = #fac863
 green       = #99c794
-cyan        = #5fb3b3
+blue        = #6699cc
 
 
 
@@ -33,7 +33,8 @@ foreground = ${colours.grey}
 line-size = 2
 
 module-margin-left = 5
-padding = 5
+padding-right = 5
+padding-left = 3
 
 font-0 = Archivo Narrow:size=22;4
 font-1 = Noto Emoji:size=20;4
@@ -52,10 +53,12 @@ type = internal/bspwm
 inline-mode = true
 enable-scroll = false
 
-ws-icon-0 = I;
-ws-icon-1 = II;
-ws-icon-2 = III;
-ws-icon-3 = V;
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
 ws-icon-default = 
 
 format = <label-state> <label-mode>
@@ -64,20 +67,25 @@ label-focused = %icon%
 label-focused-background = ${colours.sel_bg}
 label-focused-underline = ${colours.white}
 label-focused-padding = 4
+label-focused-margin-left = 1
 
 label-occupied = %icon%
-label-occupied-foreground = ${colours.silver}
-label-occupied-underline = ${colours.silver}
+label-occupied-foreground = ${colours.white}
+label-occupied-underline = ${colours.white}
 label-occupied-padding = 4
+label-occupied-margin-left = 1
 
 label-urgent = %icon%
 label-urgent-foreground = ${colours.red}
 label-urgent-underline = ${colours.red}
 label-urgent-padding = 4
+label-urgent-margin-left = 1
 
 label-empty = %icon%
-label-empty-foreground = ${colours.silver}
+label-empty-foreground = ${colours.darkgrey}
+label-empty-underline = ${colours.darkgrey}
 label-empty-padding = 4
+label-empty-margin-left = 1
 
 label-monocle = monocle
 label-monocle-background = ${colours.sel_bg}
@@ -90,7 +98,9 @@ label-monocle-padding-right = 4
 type = internal/date
 interval = 5
 date = %a %d %b
+date-alt = %A %d %b %Y
 time = %H:%M
+time-alt = %H:%M
 
 format = <label>
 format-background = ${colours.sel_bg}
@@ -180,12 +190,18 @@ type = internal/network
 interface = wlp2s0
 interval = 5
 
-format-connected = <label-connected>
+format-connected = <ramp-signal>  <label-connected>
 format-disconnected = <label-disconnected>
 
-label-connected =   %signal%% (%essid%)
+label-connected = %essid%
 label-disconnected =   -
 label-disconnected-foreground = ${colours.darkgrey}
+
+ramp-signal-0 = 
+ramp-signal-0-foreground = ${colours.red}
+ramp-signal-1 = 
+ramp-signal-1-foreground = ${colours.yellow}
+ramp-signal-2 = 
 
 
 
@@ -194,5 +210,5 @@ type = internal/xkeyboard
 
 format = <label-layout>
 
-label-layout =   %layout%
+label-layout =   %name%
 
