--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,6 +6,7 @@
 
 [options]
 font = Hack Regular 11
+#font = Iosevka Regular 12
 browser = google-chrome-stable
 resize_grip = false
 scroll_on_output = false
