--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -32,7 +32,7 @@ line-size = 2
 
 module-margin-left = 5
 padding-right = 5
-padding-left = 3
+padding-left = 4
 
 font-0 = Archivo Narrow:size=22;4
 font-1 = Noto Emoji:size=16;4
@@ -82,7 +82,7 @@ label-urgent-margin-left = 1
 
 label-empty = %icon%
 label-empty-foreground = ${colours.darkgrey}
-label-empty-underline = ${colours.darkgrey}
+;label-empty-underline = ${colours.darkgrey}
 label-empty-padding = 4
 label-empty-margin-left = 1
 
@@ -104,7 +104,7 @@ time-alt = %H:%M
 format = <label>
 format-background = ${colours.sel_bg}
 
-label = %date%, %time%
+label = %date%  %time%
 label-underline = ${colours.white}
 label-padding = 5
 
