--- a/.config/compton/config
+++ b/.config/compton/config
@@ -15,12 +15,11 @@ vsync = "opengl-swc";
 
 # Shadows
 shadow = true;
-no-dock-shadow = true;
+no-dock-shadow = false;
 no-dnd-shadow = true;
 clear-shadow = true;
 shadow-radius = 14;
 shadow-ignore-shaped = true;
-shadow-exclude-reg = "x50+0-0";
 shadow-exclude = [
     "name = 'noshadow'"
 ];
